Updates throughout, some work for #13

--- a/document/main.bib
+++ b/document/main.bib
@@ -1094,6 +1094,32 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	year={2015},
 	organization={ACM}
 }
+@incollection{fox2011performance,
+	title={Performance and Scalability},
+	author={Fox, Tim and Scott, John Edward and Spendolini, Scott},
+	booktitle={Pro Oracle Application Express 4},
+	pages={559--598},
+	year={2011},
+	publisher={Springer}
+}
+@article{forster2000key,
+	title={Key concepts in model selection: Performance and generalizability},
+	author={Forster, Malcolm R},
+	journal={Journal of mathematical psychology},
+	volume={44},
+	number={1},
+	pages={205--231},
+	year={2000},
+	publisher={Elsevier}
+}
+@inproceedings{smith2013improving,
+	title={Improving developer participation rates in surveys},
+	author={Smith, Elena and Loftin, Robert and Murphy-Hill, Emerson and Bird, Christian and Zimmermann, Thomas},
+	booktitle={Cooperative and Human Aspects of Software Engineering (CHASE), 2013 6th International Workshop on},
+	pages={89--92},
+	year={2013},
+	organization={IEEE}
+}
 @Manual{RSoftware,
 	title = {R: A Language and Environment for Statistical Computing},
 	author = {{R Core Team}},
